--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "nuxt": "^3.21.1",
