--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "nuxt": "^3.21.1",
+    "nuxt-toast": "^1.4.0",
+    "nuxt-toastify": "^1.1.0",
     "pg": "^8.18.0",
     "prisma": "^7.3.0",
     "vue": "^3.5.28",
